--- a/Lab2.ipynb
+++ b/Lab2.ipynb
@@ -586,6 +586,66 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "38df5323-c36d-497c-9b38-f7b07620999e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pyllusion_constantstim_expt(illusion_strength=30, differences=[-1,-0.5,0,0.5,1], num_trials_per_level=2, size_min=0.5, STIMULUS_DURATION=0.8, output_data_path=output_data_path):\n",
+    "    \"\"\"Muller Lyer experiment using the Method of Constant Stimuli\"\"\"\n",
+    "    \n",
+    "    # print instructions and gather observer ID\n",
+    "    print(\"In this experiment, you will see two lines with errors, and be asked to enter 1 if the top line is longer and 2 if the bottom line is longer.\")\n",
+    "    print(\"Please patiently wait to reply until you see the fixation cross. If you reply before the fixation cross, Jupyter interprets your key press as\\n a shortcut and converts the code cell to a markdown cell!\")\n",
+    "    observer_ID = input(\"Enter observer ID as a three digit number and press enter to start: \")\n",
+    "    datetime_string = datetime.now().strftime(\"%Y-%m-%d-%H-%M\")\n",
+    "    results_filename = output_data_path + \"lab2_MullerLyer_\" + str(illusion_strength) + \"_constant_stimuli_\" + str(observer_ID) + \"_\" + datetime_string + '_results.csv'\n",
+    "\n",
+    "    # expt parameters & set up\n",
+    "    deltas = differences * num_trials_per_level\n",
+    "    constantstimuli_results_df = pd.DataFrame(columns=['trial','illusion_strength','standard','difference','response','RT','size1','size2','standard1']) # prepare results container\n",
+    "    plt.figure(figsize=(1,1))\n",
+    "    try:\n",
+    "        fixation_cross = Image.open(\"./fixation_cross.jpg\")\n",
+    "    except FileNotFoundError:\n",
+    "        print(\"Error: Fixation cross file not found.\")\n",
+    "    \n",
+    "    # run the experiment loop\n",
+    "    for i, delta in enumerate(deltas, start=1):\n",
+    "        # 1) generate the illusion & gather some data to save about it\n",
+    "        stimulus = MullerLyer(illusion_strength=illusion_strength, size_min=size_min, difference=delta)\n",
+    "        size1 = stimulus.get_parameters()['Size_Top'] # the length of the line on top\n",
+    "        size2 = stimulus.get_parameters()['Size_Bottom'] # the length of the line on bottom\n",
+    "        standard1 = stimulus.get_parameters()['Distractor_TopLeft1_x1'] > stimulus.get_parameters()['Distractor_TopLeft1_x2'] \n",
+    "        # if standard1 is True, that means the top is the standard (and bottom is the comparison)\n",
+    "        # Pyllusion's quirk is that only way to determine if it is the standard is if x1>x2, which means the arrows point inward\n",
+    "\n",
+    "        # 2) display it\n",
+    "        clear_output(wait=True)\n",
+    "        t0 = time.time()\n",
+    "        display(stimulus.to_image())\n",
+    "        \n",
+    "        # 3) wait a standard amount of time then clear the image\n",
+    "        time.sleep(STIMULUS_DURATION)\n",
+    "        clear_output(wait=True)\n",
+    "        display(fixation_cross)\n",
+    "        \n",
+    "        # 4) collect response via keyboard input & record\n",
+    "        while True:\n",
+    "            resp = input(f\"Trial {i}/{len(deltas)} — which line looked longer? Top (1) or Bottom (2)?: \").strip()\n",
+    "            if resp in ['1', '2']:\n",
+    "                break\n",
+    "            print(\"Invalid input. Please type '1' or '2'.\")\n",
+    "        constantstimuli_results_df.loc[len(constantstimuli_results_df)] = \\\n",
+    "            [i, illusion_strength, size_min, delta, resp, time.time() - t0, size1, size2, standard1]\n",
+    "    \n",
+    "    clear_output()\n",
+    "    save_results_to_csv(constantstimuli_results_df, results_filename=results_filename) \n",
+    "    return constantstimuli_results_df, results_filename"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "id": "43fc75d1-109f-4ecf-909d-1dc038744fa1",
    "metadata": {},
